src/components/Header/Header.module.css
.header {
  background-color: var(--primary);
  padding: 1.5rem 1rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.header > h1 {
  font-family: "Merriweather", Times, serif;
  font-size: 2.2rem;
  font-weight: bold;
  background-image: url(/green-bg-text.jpg);
  background-clip: text;
  background-position: center;
  filter: brightness(1.8);
  color: transparent;
}

.navContainer {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 100px;
}

.navContainer > a {
  text-decoration: none;
  font-weight: 500;
  color: var(--navText);
  padding: 0.6rem 1.2rem;
  border-radius: 5px;
  background-color: var(--darkerGray);
  text-shadow: 0 0 10px rgba(0, 0, 0, 0.775);
}

.navContainer > :global(a.active) {
  background-color: var(--darkerGreen);
  border: 1px solid black;
}

.navContainer > a:hover {
  filter: brightness(1.1);
}

